# ml2-proj

./: .gitignore  classification_eda.ipynb  classification_modelling.ipynb  classification_report.ipynb  h2o_model_stacking.ipynb  pyproject.toml  readme.md  regression.ipynb  regression_report.html  regression_report.ipynb  test.py
data/: c2.csv  classification_test.csv  classification_train.csv
