[tool.poetry]
name = "ml2-proj"
version = "0.1.0"
description = ""
authors = ["Jakub Wujec <kuba1302@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.3"
scikit-learn = "^1.3.2"
xgboost = "^2.0.2"
matplotlib = "^3.8.2"
numpy = "^1.26.2"
ipykernel = "^6.27.1"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
